week 2 sgwc newsletter

--- a/spartangwc/news.html
+++ b/spartangwc/news.html
@@ -169,6 +169,232 @@
             </div> <!--/.container -->
         </section>
 
+        <!--Week 2 -->
+        <section id="week2" class="news bg-white">
+            <div class="container">
+                <div class="headline text-center">
+                    <div class="row">
+                        <div class="col-md-10 col-md-offset-1 text-center">
+                            <h2 class="section-title">Week 2</h2> <!-- begin week 2 summary -->
+                            <h4 class="section-title">Coding is Cool!</h4>
+                        </div>
+                    </div>
+                </div>
+                <p>
+                    We welcomed back our young coders on Saturday morning for another day of fun with HTML and CSS! It was amazing to see the students' excitement and enthusiasm to learn. Students were eager to learn new HTML tags and even asked additional questions related to advanced skills.
+                </p>
+                <p>
+                    Before we dive into a full recap of Saturday's meeting, we'd like to share a few announcements.
+                </p>
+                <h4 class="text-center">Announcements</h4>
+                <ul>
+                    <h4>1. Bonus Hour</h4>
+                    <p>
+                        Join us for "bonus hour" every <b>Thursday from 6:00-7:00p ET</b> open to all SGWC
+                        participants. SGWC mentors will be available on Zoom during the bonus hour
+                        to resolve technical difficulties, dive deeper into the coding concepts we've learned,
+                        or to talk about computer science in general!
+                    </p>
+                    <p>
+                        Use the Zoom link below to join us for a bonus hour of fun each week.
+                        The password for our bonus hour was sent in the welcome email.
+                    </p>
+                    <ul>
+                        <li style="list-style: disc"><b>Zoom Link:</b> <a href="https://msu.zoom.us/j/94658238348">https://msu.zoom.us/j/94658238348</a> (password is provided in the welcome email)</li>
+                    </ul>
+                    <h4>2. Girls Who Code Summer Programs</h4>
+                    <p>
+                        The national organization of Girls Who Code is offering two summer opportunities for high school students.
+                    </p>
+                    <p>
+                        The <b>Summer Immersion Program (SIP)</b> is a live, virtual, 2-week introduction to computer science course for 9th-11th graders. Students will learn 
+                        HTML, CSS, and JavaScript while getting an inside look into the tech industry through company sponsors.
+                    </p>
+                    <p>
+                        The <b>Self-Paced Program</b> is a <b>free</b> remote computer science course for 9th-12th graders who prefer not to adhere 
+                        to a strict schedule. Participants can choose to earn beginner-level badges in HTML, CSS, and JavaScript 
+                        (for web development) or an intermediate-level badge in Python (for cybersecurity). Students will also have the chance to 
+                        build a community through weekly sessions and Girls Who Code activities.
+                    </p>
+                    <p>
+                        Find more details and register at <a href="https://girlswhocodesm.smapply.io/">https://girlswhocodesm.smapply.io/</a>
+                    </p>
+                    <h4>4. Looking Ahead</h4>
+                    <p>
+                        We'll see you again this <b>Saturday, 2/4 at 10a ET</b> for our third SGWC meeting of the spring, where we will review material from last week
+                        and learn about images + copyright!
+                    </p>
+                    <h4>5. Questions?</h4>
+                    <p>
+                        As always, please reach out with any questions / concerns / ideas / feedback to <a href="mailto:info@spartangwc.org">info@spartangwc.org</a>.
+                    </p>
+                </ul>
+                <h4 class="text-center">Meeting Recap</h4>
+                <p>
+                    Mentors welcomed participants &mdash; as students rolled in mentor-student bonding had already begun!
+                </p>
+                <p>
+                    To start off the day, our in-person cohort divided into groups and discussed five things we all have in common with one another, and our virtual cohorts worked to navigate and complete an escape room together.
+                </p>
+                <p>
+                    After our icebreaker, we watched two videos for our spotlight about the intersection between fashion, art, and code!
+                </p>
+                <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+                    <div class="row">
+                        <div class="col-md-6" align="middle">
+                            <iframe allowfullscreen width="400" height="250" src="https://www.youtube.com/embed/0wxGVztsmjg"></iframe>
+                            <p><i>Made with Code: Maddy Maxey, Fashion and Wearable Technology</i></p>
+                        </div>
+                        <div class="col-md-6" align="middle">
+                            <iframe allowfullscreen width="400" height="250" src="https://www.youtube.com/embed/SYo3PMfiTZ4"></iframe>
+                            <p><i>Made with Code Fran Kalal, Pixar Animation Studios</i></p>
+                        </div>
+                    </div>
+                <p>
+                    Once finished, we jumped right into out lesson on HTML formatting and links, and we continued working on exercises in CodeHS.
+                </p>
+                <p>
+                    We ended things with small mentor-student group discussions, reflecting on what went well, what was challenging, and what students are looking forward to at next Saturday's session.  Responses to our weekly feedback survey were quite positive, but don't hesitate to reach out to <a href="mailto:info@spartangwc.org">info@spartangwc.org</a> if you have any questions or concerns! 
+                </p>
+                <h4 class="text-center">Mentor Spotlight</h4>
+                <p>
+                    SGWC is led, organized, and run by MSU students with the help of <a href="https://www.egr.msu.edu/people/profile/iselava1">Teresa Isela Vandersloot</a> and
+                    <a href="https://www.egr.msu.edu/people/profile/ldillon">Dr. Laura Dillon </a>,
+                    and we thought it would be fun to
+                    introduce a few of our <a href="contact.html#team">team members</a> each week.
+                </p>
+                <p>
+                    To kick off our mentor spotlight series, we'd like to introduce the Spring 2023 Curriculum Leads! 
+                    They have been working hard to get you all registered and keep you informed of plans for going forward.
+                </p>
+
+                <!-- mentor photos -->
+                <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+                    <div class="row">
+                        <div class="col-md-3" align="middle">
+                            <img class="shadow-lg" src="assets/img/ss23photos/team/Averi.jpg" height="350">
+                            <br><br>
+                            <p><i>Averi Justice</i></p>
+                        </div>
+                        <div class="col-md-3" align="middle">
+                            <img class="shadow-lg" src="assets/img/ss23photos/team/Sanaye.jpeg" height="350">
+                            <br><br>
+                            <p><i>Sanaye Lewis</i></p>
+                        </div>
+                        <div class="col-md-3" align="middle">
+                            <img class="shadow-lg" src="assets/img/ss23photos/team/Trinity.jpg" height="350">
+                            <br><br>
+                            <p><i>Trinity Johnson</i></p>
+                        </div>
+                        <div class="col-md-3" align="middle">
+                            <img class="shadow-lg" src="assets/img/ss23photos/team/Jasmine.jpeg" height="350">
+                            <br><br>
+                            <p><i>Jasmine Richardson</i></p>
+                        </div>
+                    </div>
+                    <!-- mentor QA -->
+                    <div class="row">
+                        <div class="col-md-3" align="left"> <!-- Averi -->
+                            <p>
+                                <b>What are you studying?</b><br>
+                                I am a recent graduate from MSU with a degree in Computer Science with a Spanish minor! I have been working with SGWC for 4 years!
+                            </p>
+                            <p>
+                                <b>How did you become interested in computer science?</b><br>
+                                I took a java class in high school.
+                            </p>
+                            <p>
+                                <b>What's something cool you've done with computer science?</b><br>
+                                I started a coding club for fifth graders when I was in high school which prompted the school to add computer science to their curriculum!
+                            </p>
+                            <p>
+                                <b>What are you hoping to do with computer science in the future?</b><br>
+                                I’m planning to make a personal website and I want to continue doing outreach like Girls Who Code long into the future.
+                            </p>
+                            <p>
+                                <b>What advice do you have for our students?</b><br>
+                                Never be afraid to try new things, even if you’re not good at them!
+                            </p>
+                        </div>
+                        <div class="col-md-3" align="left"> <!-- Sanaye -->
+                            <p>
+                                <b>What are you studying?</b><br>
+                                I am a second-year majoring in Computer Science with a minor in Cognitive Science!
+                            </p>
+                            <p>
+                                <b>How did you become interested in computer science?</b><br>
+                                I took a coding class in high school and did Kode With Klossy one summer and really loved it.
+                            </p>
+                            <p>
+                                <b>What's something cool you've done with computer science?</b><br>
+                                I made an app about different desserts around the world based on region!
+                            </p>
+                            <p>
+                                <b>What are you hoping to do with computer science in the future?</b><br>
+                                I want to build software in the future to help increase accessibility.
+                            </p>
+                            <p>
+                                <b>What advice do you have for our students?</b><br>
+                                Be patient with yourself, it takes time to learn new things. Try and try again.
+                            </p>
+                        </div>
+                        <div class="col-md-3" align="left"> <!-- Trinity -->
+                            <p>
+                                <b>What are you studying?</b><br>
+                                I am a third-year majoring in Computer Science with a minor in Japanese!
+                            </p>
+                            <p>
+                                <b>How did you become interested in computer science?</b><br>
+                                After taking my first computer science class I knew there was no way I could go back to a life where I didn't use it.
+                            </p>
+                            <p>
+                                <b>What's something cool you've done with computer science?</b><br>
+                                I worked with a group to create a movie recommendation website that would make recommendations based on your current mood.
+                            </p>
+                            <p>
+                                <b>What are you hoping to do with computer science in the future?</b><br>
+                                Help to develop and or maintain a educational application, hopefully for language learning.
+                            </p>
+                            <p>
+                                <b>What advice do you have for our students?</b><br>
+                                Keep your head up or the crown slips!
+                            </p>
+                        </div>
+                        <div class="col-md-3" align="left"> <!-- Jasmine -->
+                            <p>
+                                <b>What are you studying?</b><br>
+                                I am a fourth-year majoring in Computer Science!
+                            </p>
+                            <p>
+                                <b>How did you become interested in computer science?</b><br>
+                                I loved the problem solving aspect of coding.
+                            </p>
+                            <p>
+                                <b>What's something cool you've done with computer science?</b><br>
+                                Over the summer I interned with Ford and worked on their FordPass App.
+                            </p>
+                            <p>
+                                <b>What are you hoping to do with computer science in the future?</b><br>
+                                This coming summer I will be going to NYC to work with Bank of America doing software engineering. 
+                            </p>
+                            <p>
+                                <b>What advice do you have for our students?</b><br>
+                                Keep going even when times get tough.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <p>
+                    Thanks for making last Saturday a blast, everyone. We can't wait to see you this Saturday!
+                </p>
+                <p>
+                    -The SGWC Team
+                </p>
+
+
+            </div>
+        </section> <!-- end week 2 summary -->
+
         <!--Week 1 -->
         <section id="week1" class="news bg-white">
             <div class="container">
@@ -380,6 +606,7 @@
             </div>
         </section> <!-- end week 1 summary -->
 
+        
         <!-- end news section -->
 
 <!--
