Fixed sentence in week 2 newsletter

--- a/spartangwc/news.html
+++ b/spartangwc/news.html
@@ -265,7 +265,7 @@
                 </p>
                 <p>
                     To kick off our mentor spotlight series, we'd like to introduce the Spring 2023 Curriculum Leads! 
-                    They have been working hard to get you all registered and keep you informed of plans for going forward.
+                    They have been working hard to plan the curriculum and adapting it to the coders' needs.
                 </p>
 
                 <!-- mentor photos -->
