--- a/spartangwc/news.html
+++ b/spartangwc/news.html
@@ -264,7 +264,7 @@
                     introduce a few of our <a href="contact.html#team">team members</a> each week.
                 </p>
                 <p>
-                    To kick off our mentor spotlight series, we'd like to introduce the Spring 2023 Curriculum Leads! 
+                    To continue our mentor spotlight series, we'd like to introduce the Spring 2023 Curriculum Leads! 
                     They have been working hard to plan the curriculum and adapting it to the coders' needs.
                 </p>
 
