--- a/belizeweb/SS2023/news.html
+++ b/belizeweb/SS2023/news.html
@@ -168,7 +168,7 @@
 												<p><i>Mikayla Norton</i></p>
 											</div>
 											<div class="col-md-6" align="middle">
-												<img class="shadow-lg" src="images/teamPhotos/Oyendrilla Dobe750x1000r72.jpeg" height="350">
+												<img class="shadow-lg" src="images/teamPhotos/OyendrillaDobe750x1000r72.jpeg" height="350">
 												<br><br>
 												<p><i>Oyendrilla Dobe</i></p>
 											</div>
