fix looking ahead

--- a/belizeweb/SS2023/news.html
+++ b/belizeweb/SS2023/news.html
@@ -107,7 +107,8 @@
 										<p>
 											Remember that <b>we meet every Saturday from 10-12p BZT, through 1 April!</b>. Our temperature checks show that some of you are itching
                                             to start learning CSS. 
-                                            Don't worry &mdash; that is coming soon. &#128525;
+                                            Don't worry &mdash; that is coming soon.
+                                            But this Saturday, we'll be covering Lists and Tables. &#128525;
 										</p>
 										<h4>4. Questions?</h4>
 										<p>
