minor html fixes

--- a/spartangwc/news.html
+++ b/spartangwc/news.html
@@ -171,7 +171,7 @@
         
         
         <!--Notice to Coders and Parents -->
-       <section id="week3" class="news bg-white">
+       <section id="notice" class="news bg-white">
             <div class="container">
                 <div class="headline text-center">
                     <div class="row">
