Added Week5 news

--- a/spartangwc/news.html
+++ b/spartangwc/news.html
@@ -194,6 +194,89 @@
                 </p>
            </div>
         </section> <!-- end Notice to Coders and Parents -->
+
+        <!--Week 5 -->
+        <section id="week4" class="news bg-white">
+            <div class="container">
+                <div class="headline text-center">
+                    <div class="row">
+                        <div class="col-md-10 col-md-offset-1 text-center">
+                            <h2 class="section-title">Week 5</h2> <!-- begin week 2 summary -->
+                            <h4 class="section-title">Organization with Coding!</h4>
+                        </div>
+                    </div>
+                </div>
+                <p>
+                    We welcomed back our coders with a fun day of review, learning about the legalities related to their work, and applesauce! We were eager to teach more exciting and advanced material, and hope the students are just as excited to learn them.
+                </p>
+                <p>
+                    Before we dive into a full recap of Saturday's meeting, we'd like to share a few announcements.
+                </p>
+                <h4 class="text-center">Announcements</h4>
+                <ul>
+                    <h4>1. GLADL Coding Club</h4>
+                    <p>
+                        The Grand Ledge Area District Library is starting a new Code Club! GLADL will be using the curriculum from Girls Who Code intended for 3rd to 5th grade. 
+                        But GLADL is not restricting the club to only girls. Any kid who is in 3rd grade and up, or homeschool equivalent is welcome. No coding experience is necessary! <br>
+                        The Code Club will be meeting every Wednesday from 6-7pm starting March 1st and running through May. <br>
+                        Kids should register for the club on Girls Who Code HQ and use the club code MI45609 to register for GLADL's club. 
+                        A document with detailed instructions for registering is attached. 
+                        Please pass the word on to kids you know who might be interested and sign up your own children if they would like to participate. <br> <br>
+                        Carol Robinson <br>
+                        collections@gladl.org <br>
+                        Youth Services Specialist <br>
+                        Grand Ledge Area District Library <br>
+                        131 E. Jefferson St. <br>
+                        Grand Ledge, MI 48837
+                    </p>
+                    <h4>2. Bonus Hour</h4>
+                    <p>
+                        Join us for "bonus hour" every <b>Thursday from 6:00-7:00p ET</b> open to all SGWC
+                        participants. SGWC mentors will be available on Zoom during the bonus hour
+                        to resolve technical difficulties, dive deeper into the coding concepts we've learned,
+                        or to talk about computer science in general!
+                    </p>
+                    <p>
+                        Use the Zoom link below to join us for a bonus hour of fun each week.
+                        The password for our bonus hour was sent in the welcome email.
+                    </p>
+                    <ul>
+                        <li style="list-style: disc"><b>Zoom Link:</b> <a href="https://msu.zoom.us/j/94658238348">https://msu.zoom.us/j/94658238348</a> (password is provided in the welcome email)</li>
+                    </ul>
+                    <h4>3. Looking Ahead</h4>
+                    <p>
+                        We'll see you again this <b>Saturday, 2/11 at 10a ET</b> for our fourth SGWC meeting of the spring, where we will review material from last week and learn about copyright!
+                    </p>
+                    <h4>4. Questions?</h4>
+                    <p>
+                        As always, please reach out with any questions / concerns / ideas / feedback to <a href="mailto:info@spartangwc.org">info@spartangwc.org</a>.
+                    </p>
+                </ul>
+                <h4 class="text-center">Meeting Recap</h4>
+                <p>
+                    We started off the day with an icebreaker sharing our favorite holidays and family traditions.
+                </p>
+                <p>
+                    After our icebreaker for our spotlight we watched a video of a volcanologist passionate about the climate and pushing more women in STEM.
+                </p>
+                <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+                    <div class="row">
+                        <div class="col-md-6" align="middle">
+                            <iframe width="400" height="250" src="https://www.youtube.com/embed/xMb2_HS7L4k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                            <p><i>Volcanologist Pushes For More Diversity In STEM to Fight Climate Change</i></p>
+                        </div>
+                    </div>
+                </div>
+                <p>
+                    We then reviewed what we earned in previous lessons including formatting, links, and images. 
+                    We then dived right into our lesson on lists and tables and learned how to use new tags to format text into ordered/unordered lists and into tables.
+                </p>
+                <p>
+                    Towards the end, we gave a brief intro of the final project for students who wanted to get started on their project during our two week break. 
+                    We ended with our standup reflecting on what went well, what was challenging, and what were students' favorite exercises.
+                </p>
+            </div>
+        </section> <!-- end week 5 summary -->
         
 
         <!--Week 3 -->
@@ -256,6 +339,7 @@
                             <p><i>Learn UX writing with Augmented Reality</i></p>
                         </div>
                     </div>
+                </div>
                 <p>
                     Once finished, we reviewed what we have learned from the previous weeks including formatting text, links, and attributes. We jumped into our lesson on images and learned about the image tag and its attributes.
                 </p>
