--- a/belizeweb/SS2023/news.html
+++ b/belizeweb/SS2023/news.html
@@ -89,7 +89,7 @@
                                             We encourage coders to take advantage of these next two weeks to work on their final projects. Instructions are in <a href="https://codehs.com/lms/assignment/91599257" target="_blank">CodeHS Unit 7 (Final Project)</a>. 
                                         </p>
                                         <!-- <br> -->
-										<h4>1. Bonus Hours</h4>
+										<h4>2. Bonus Hours</h4>
 										<p>
 											Join us on <b>March 2, 9, and 16</b> to get help with your final projects! As usual the Bonus Hours are from
 											<b>7-8pm Belize Time (BZT).</b> 
@@ -100,16 +100,16 @@
 											</ul>
                                         <br> 
 
-										<h4>2. Looking Back</h4>
+										<h4>3. Looking Back</h4>
 										<p>
 											Coders have been amazing! In just seven lessions, they've learned the basics of  HTML &mdash; Text, Links, Images, Copyright, Lists and Tables  &mdash; and even some CSS. Check out our <a href="resources.html">resources</a> page for the slides from each meeting.
 										</p>
-										<h4>3. Looking Ahead</h4>
+										<h4>4. Looking Ahead</h4>
 										<p>
 											 We meet <b> every Saturday, EXCEPT MARCH 4th and 11th, 10-12p BZT, through 1 April!</b> To reiterate, we will <b>not</b> have class March 4th and 11th.
                                              The next meeting will be devoted to review and working on final projects.
 										</p>
-										<h4>4. Questions?</h4>
+										<h4>5. Questions?</h4>
 										<p>
 											As always, please reach out with any questions / concerns / ideas / feedback to <a href="mailto:belizecc@egr.msu.edu">belizecc@egr.msu.edu </a>.
 										</p>
@@ -227,70 +227,65 @@
 										spotlight a few of them each week.
 									</p>
 									<p>
-										To continue our mentor spotlight series, we'd like to introduce some of the Spring 2023 Faculty Advisors!
+										To continue our spotlight series, we'd like to introduce Teresa Isela VanderSloot and Dr. Laura Dillon!
 									</p>
 				
 									<!-- mentor photos -->
+									<h4 class="text-center">Advisor Spotlight</h4>
 									<div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+										<!-- advisor photos -->
 										<div class="row">
 											<div class="col-md-6" align="middle">
-												<img class="shadow-lg" src="images/teamPhotos/MikaylaNorton750x1000r72.jpeg" height="350">
-												<br><br>
-												<p><i>Mikayla Norton</i></p>
+												<img class="shadow-lg" src="images/teamPhotos/LaurieCSforALL.jpg" width=50%>
+												<br>
+												<p><i>Laura Dillon</i></p>
 											</div>
 											<div class="col-md-6" align="middle">
-                                                <img class="shadow-lg" src="images/teamPhotos/Oyendrila%20Dobe750x1000r72.jpeg"
-                                                     height="350">
-												<br><br>
-												<p><i>Oyendrilla Dobe</i></p>
+												<img class="shadow-lg" src="images/teamPhotos/teresa750x1000_78R.jpg" width=50%>
+												<br>
+												<p><i>Teresa VanderSloot</i></p>
 											</div>
 										</div>
-										<!-- mentor QA -->
+										<!-- advisor QA -->
 										<div class="row">
-											<div class="col-md-6" align="left"> <!-- Mikayla -->
+											<div class="col-md-6" align="left"> <!-- Laura -->
 												<p>
 													<b>What are you studying?</b><br>
-													Michigan State: M.S. student in Data Science, B.S. in Applied Engineering Sciences with Supply Chain concentration + minors in Business and CMSE (Computational Math, Science, Engineering)											
+													2 years ugrad at K College; BA & MS in math at UMICH; PhD in CS at UMASS.
 												</p>
 												<p>
 													<b>How did you become interested in computer science?</b><br>
-													I fell in love with the data science side of computer science from an undergraduate research experience at MSU.
+													While at at K College, I took a programming class in Fortran programming. I liked that it was logical and useful!
 												</p>
 												<p>
 													<b>What's something cool you've done with computer science?</b><br>
-													I used Spotify data to generate a predictive model of a song's popularity based on its features and characteristics.											</p>
+													Teach secondary-school girls at a summer camp in Rwanda! Read all about the camp on the <a href="https://www.egr.msu.edu/techkobwa">TechKobwa website</a> and <a href="https://rwandancampforgirlsinit.blogspot.com/">blog</a>. 
+												</p>
 												<p>
 													<b>What are you hoping to do with computer science in the future?</b><br>
-													I would love to work in AI and Fairness/Ethics, and am considering going on for a PhD in this field.											<p>
-													<b>What advice do you have for our students?</b><br>
-													Computer Science is like a fun logic puzzle, don't be afraid to step outside of your comfort zone to find a solution!												</p>
+													Inspire ever more young people to explore the magic of coding!
+												</p>
 											</div>
-											<div class="col-md-6" align="left"> <!-- Oyendrilla -->
+											<div class="col-md-6" align="left"> <!-- Teresa -->
 												<p>
 													<b>What are you studying?</b><br>
-													Bachelor's in Computer Science and Engineering from India.
+													Grand Valley  BS and Central Michigan MS Administration
 												</p>
-													<p>
+												<p>
 													<b>How did you become interested in computer science?</b><br>
-													I started by learning LOGO and amazed at how we could easily convert our ideas into pictures on the screen.
+													I was the computer science advisor for ten years here at MSU.
 												</p>
 												<p>
 													<b>What's something cool you've done with computer science?</b><br>
-													I created a shopping website to sell my favorite badminton equipments.
-													</p>
-													<p>
+													As an advisor, it was so exciting to see the numerous  job opportunities which were available to my CS students. This is even more so today.
+												</p>
+												<p>
 													<b>What are you hoping to do with computer science in the future?</b><br>
-													I'm trying to understand how we reason about things and in turn teach a computer to do it.
-													</p>	
-													<p>
-													<b>What advice do you have for our students?</b><br>
-													Always question why you are learning something.
-													</p>
+													I am honored to partner with passionate students, faculty, alumni and professionals to offer CS outreach to K-12 kids.  Regardless of which career you will pursue, learning  how to code will help you.
+												</p>
 											</div>
 										</div>
-							
-
-									</div>
+									</div>	
 									<p>
 										Thanks for making last Saturday a blast, everyone. We can't wait to see you on Saturday March 18th when we return!
 									</p>
